# CYBER.LAB

./: .gitignore  .gitlab-ci.yml  APP_USER_SIMULATION_GUIDE.txt  BLACKBOX_TESTING_GUIDE.txt  LAB_SETUP_SUMMARY.txt  README.md  WINDOWS_2025_LAB_SUMMARY.txt  app_users_simulation.json  pyproject.toml  requirements.txt
artifacts/: COMPLETE_ENGAGEMENT_SUMMARY.txt  CYBER_LAB_ANALYSIS_INDEX.md  DELIVERY_PACKAGE_SUMMARY.txt  FILES_INDEX.md  HEBREW_SUMMARY_CYBER_UNIT.txt  RADWARE_SUMMARY_TRANSMISSION.txt  RADWARE_WAF_BYPASS_ANALYSIS.md  RADWARE_WAF_BYPASS_TECHNIQUES_HEBREW.md  drupal_critical_exploitation_report.md  drupal_privilege_escalation_analysis.md  exploitation_simulation_scenarios.md  extracted_.env  extracted_.env.local  extracted_.env.production  extracted_.git_config  extracted_admin_config  extracted_app_config_parameters.yml  extracted_backup.sql  extracted_config.php  extracted_config_sync  extracted_configuration.php  extracted_database.sql  extracted_dump.sql  extracted_includes_settings.inc.php  extracted_sites_all_settings.php  extracted_sites_default_settings.local.php  extracted_sites_default_settings.php  extracted_web_sites_default_settings.php  extracted_wp-config.php  scenario_summaries.xlsx  system_analysis_clientside.md  system_analysis_serverside.md  zero_day_analysis_opensource.md  zero_day_development_toolkit.md  zero_day_php_python_webstack.md  zero_day_vba_msaccess_legacy.md
lab/: .gitignore  BLACKBOX_TESTING_METHODOLOGY.md  LAB_TESTING_GUIDE.md  README.md  apache-drupal.conf  apache-drupal10.conf  apache-wordpress-latest.conf  blackbox_testing.sh  (+20 more)
(+26 files in other folders)
